--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,8 @@ input:focus {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
     padding: 1rem;
+    display: none;
+    
 }
 
 details {
@@ -171,3 +173,4 @@ details p {
     line-height: 2;
     
 }
+
