--- a/styles.css
+++ b/styles.css
@@ -186,18 +186,38 @@ details p {
 
 .lined p {
     border: 1px solid grey;
+    padding: .2rem;
 }
 
 .cols3-equal {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
 }
 
+.top-margin{
+    margin-top: 10px;
+}
 
 .cols2 {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 1fr;
 }
+
+.f-row {
+    display: grid;
+    grid-template-columns: 4fr .5fr .5fr;
+}
+
+.s-row {
+    display: grid;
+    grid-template-columns: ;
+}
+
+.bold-head p {
+    text-align: center;
+    font-weight: bold;
+}
+
+
 
 
