--- a/styles.css
+++ b/styles.css
@@ -143,35 +143,37 @@ input:focus {
 .hide {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
-    /* display: none; */
+    display: none;
     padding: 1rem;
     
 }
 
 details {
-    box-shadow: 2px 2px 4px grey;
+    /* box-shadow: 2px 2px 4px grey; */
     border-radius: 5px;
+    /* border: 1px solid grey; */
 
 }
 
 summary {
-    display: flex;
-    justify-content: space-between;
-    /* padding: 1rem; */
-
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0px;
+    /* justify-content: space-between; */
 }
 
 summary p{
-    display: inline-block;
-    font-weight: 600;
+    /* display: inline-block; */
+    /* font-weight: 600; */
     color: black;
     padding: 0px;
+    margin-left: 0px;
 
 }
 
 
 details p {
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     text-align: left;
     padding: .8rem 1rem;
     line-height: 2;
@@ -211,17 +213,16 @@ details p {
 
 .cols2 {
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 2fr 1fr;
 }
-
 .f-row {
-    display: grid;
-    grid-template-columns: 4fr .5fr .5fr;
+    border: 1px solid grey;
 }
 
 .s-row {
     display: grid;
-    grid-template-columns: 4fr .5fr .5fr;
+    grid-template-rows: 1fr 1fr;
+    border: 1px solid grey;
 }
 
 .bold-head {
@@ -266,6 +267,7 @@ details p {
     padding-bottom: .1rem; 
 }
 
+
 .textpad {
     padding-left: 1rem;
     padding-bottom: .2rem;
@@ -282,5 +284,23 @@ details p {
     border-right: 1px solid transparent;
 }
 
+.rows2-nil {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.main-table p{ 
+    font-size: 1rem;
+}
 
 
+.cols2-nil{
+    border: 1px solid grey;
+    display: grid;
+    grid-template-columns: 2fr 1fr ;
+}
+
+.cols-half {
+    display: grid;
+    grid-template-columns: .5fr .5fr;
+}
