--- a/styles.css
+++ b/styles.css
@@ -143,10 +143,14 @@ input:focus {
 .hide {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
-    display: none;
+    /* display: none; */
     padding: 1rem;
     
     
+}
+
+.blue {
+    color:  blue;
 }
 
 details {
