--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ input:focus {
 .hide {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
-    /* display: none; */
+    display: none;
     padding: 1rem;
     
     
@@ -212,6 +212,43 @@ details p {
     
 }
 
+.cols8 {
+    display:  grid;
+    grid-template-columns: repeat(8, 1fr);;
+    
+}
+
+#small {
+    font-size: .6rem;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+select {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    border: 1px solid grey;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: .9rem;
+}
+#yforecast {
+    font-weight: 600;
+    font-size: 1.1rem;
+
+}
+
+#ymdp {
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-top: 30px;
+    margin-bottom: 0px;
+}
+
+#force {
+    margin-top: 10px;
+}
 .top-margin{
     margin-top: 10px;
 }
