--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ input:focus {
 .hide {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
-    /* display: none; */
+    display: none;
     padding: 1rem;
     
     
