--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,7 @@ summary p{
     color: black;
     padding: 0px;
     margin-left: 0px;
+    font-size: .8rem;
 
 }
 
@@ -334,7 +335,7 @@ select {
 }
 
 .main-table p{ 
-    font-size: 1rem;
+    font-size: .9rem;
 }
 
 
