--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ input:focus {
 .hide {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
-    display: none;
+    /* display: none; */
     padding: 1rem;
     
     
@@ -181,9 +181,14 @@ summary p{
 details p {
     /* margin-left: 1rem; */
     text-align: left;
-    padding: .8rem 1rem;
+    padding: .8rem .5rem;
     line-height: 2;
     
+}
+
+.special {
+    padding: 0px;
+    margin-left: 5px;
 }
 
 
