--- a/styles.css
+++ b/styles.css
@@ -354,3 +354,9 @@ select {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+.bold-description-label {
+    font-size: 1.3rem;
+    font-weight: bold;
+    
+}
