--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ input:focus {
 
 .blue {
     color:  blue;
+    text-align: center;
 }
 
 details {
@@ -229,6 +230,7 @@ details p {
 
 .border {
     border: 1px solid  black;
+    font-weight: bold;
 }
 
 #small {
