--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,13 @@ select {
 
 }
 
+#year {
+    width:  100%;
+    padding: 0px;
+    padding-top:  15px;
+    padding-bottom: 15px;
+}
+
 #ymdp {
     font-weight: bold;
     font-size: 1.1rem;
