--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,8 @@ h1 {
 
 .chart {
     font-size: 2.2rem;
-    color: #0E8388;
-    /* text-shadow: 2px 2px 2px black; */
+    color: #45FFCA;
+    text-shadow: 2px 2px 2px black;
     
 }
 
