--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ input {
 }
 
 .green {
-    color: #0B666A;
+    color: #A2FF86;
     font-weight: bold;
 }
 .blueM {
@@ -212,8 +212,8 @@ summary p{
 details p {
     /* margin-left: 1rem; */
     text-align: left;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    /* padding-top: 1rem; */
+    /* padding-bottom: 1rem; */
     line-height: 2;
     padding-left: 2px;
     
