--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     /* padding: 2rem; */
     border-radius: 10px;
     box-shadow: 2px 3px 5px grey;
-    background-color: #ffc439;
+    background-color: white;
     font-family: 'Roboto', sans-serif;
 }
 
