--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ input {
     padding-top: 1rem;
     padding-bottom:  1rem;
     width: 100%;
-    background-color: transparent;
+    background-color: white;
     text-align: center;
     font-size: 1rem;
     font-weight: bold;
@@ -129,11 +129,13 @@ input:focus {
     outline: none;
 }
 
+
 .styled-input {
     border: 1px solid rgb(211, 210, 210);
     border-radius: 10px;
     margin-bottom: 10px;   
     box-shadow: 3px 3px 5px grey; 
+    background-color: white;
 }
 
 .trigger-btns {
@@ -429,6 +431,11 @@ select {
     text-decoration: underline;
     color: red;
     font-weight: bold;
+}
+
+input::after {
+    background-color: red;
+
 }
 
 @media (max-width: 444px) {
