--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ input:focus {
 .hide {
     box-shadow: 5px 5px 7px grey;
     border-radius: 10px;
-    display: none;
+    /* display: none; */
     padding: 1rem;
     
     
@@ -256,7 +256,7 @@ details p {
 
 #cols4Equal {
     display: grid;
-    grid-template-columns: repeat(9, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 5px;
 }
 
@@ -510,7 +510,7 @@ input::after {
         font-size: .9rem;
     }
     #cols4Equal {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
@@ -521,7 +521,7 @@ input::after {
         
     }
     #cols4Equal {
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
