--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,21 @@ button {
     text-align: center;
 }
 
+.greenLove {
+    color: green;
+    font-weight: bold;
+}
+
+.yellowLove {
+    color: yellow;
+    font-weight: bold;
+}
+
+.redLove {
+    color:  red;
+    font-weight: bold;
+}
+
 /* header  */
 header{
     background-image: linear-gradient(80deg, #98EECC, #D0F5BE, white);
@@ -57,6 +72,22 @@ h1 {
     box-shadow: 4px 4px 4px  grey;
 }
 
+.twos {
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem;
+}
+
+.twos span {
+    display: block;
+}
+.nineRows {
+    display: grid;
+    /* grid-template-rows: repeat(2, 1fr); */
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem;
+}
 .chart {
     font-size: 2.2rem;
     color: #45FFCA;
