--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,17 @@ button {
     text-align: center;
 }
 
-.greenLove {
+.green {
     color: green;
     font-weight: bold;
 }
 
-.yellowLove {
+.yellow {
     color: yellow;
     font-weight: bold;
 }
 
-.redLove {
+.red {
     color:  red;
     font-weight: bold;
 }
