--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,12 @@
 
 
 .body {
-    /* padding: 2rem; */
     border-radius: 10px;
     box-shadow: 2px 3px 5px grey;
     background-color: #ffc439;
     font-family: 'Roboto', sans-serif;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 
@@ -45,7 +46,7 @@ button {
 }
 
 /* header  */
-header{
+#header{
     background-image: linear-gradient(80deg, #98EECC, #D0F5BE, white);
     padding: 2.5rem;
     border-radius: 0px 0px 40px 40px;
@@ -130,10 +131,9 @@ form {
 input {
     background-color: white;
     border: 1px solid transparent;
-    /* padding: 1rem; */
     padding-top: 1rem;
     padding-bottom:  1rem;
-    width: 100%;
+    /* width: 100%; */
     background-color: white;
     text-align: center;
     font-size: 1rem;
@@ -540,6 +540,10 @@ input::after {
     }
     #cols4Equal {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .btn {
+        font-size: .8rem;
     }
 }
 
