--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ input {
     border: 1px solid transparent;
     padding-top: 1rem;
     padding-bottom:  1rem;
-    /* width: 100%; */
+    width: 100%;
     background-color: white;
     text-align: center;
     font-size: 1rem;
